--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,6 +1,6 @@
-sfdc.user=tanmay@whishworks.com	
-sfdc.password=force.1234
-sfdc.token=pwVTj5k75Vv6D8RszTt6hoaO0
+sfdc.user=
+sfdc.password=
+sfdc.token=
 
 db.host=10.0.2.40
 db.port=3306
@@ -9,7 +9,7 @@ db.password=mule
 db.database=training
 
 
-twitter.accesskey= 755326759067869184-UqbprSlTvhF8UuGZQGzj2IK7bnC9JDF
-twitter.accesssecret= BlwSPhKqozYsstXWnlbJQKGx5A3Px93feKlPXmYFgRReT
-twitter.consumerkey= HtfHu5vJDoQMExQd0UugvwyqW
-twitter.consumersecret= 9GFrE6NN8ppYLNGExzJHPLVWyfbsjEGJZJsJAy41riGUl4MJ21
+twitter.accesskey=
+twitter.accesssecret=
+twitter.consumerkey=
+twitter.consumersecret=
