added salesforce credentials

--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,6 +1,6 @@
-sfdc.user=
-sfdc.password=
-sfdc.token=
+sfdc.user=tanmay@whishworks.com	
+sfdc.password=force.1234
+sfdc.token=pwVTj5k75Vv6D8RszTt6hoaO0
 
 db.host=10.0.2.40
 db.port=3306
